# veyra

./: .coverage  .gitignore  .gitmodules  0001-model-backend-abstraction.md  0002-audit-trail-design.md  Anchor.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  __init__.py  bug_report.md  ci.yml  config.py  conftest.py  dependabot.yml  feature_request.md  nano.py  pyproject.toml  quickstart.md  template.md  test_audit_integration.py  test_backends.py
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml
configs/: default.yaml
docs/: architecture.md  benchmarks.md
docs/api/: index.md
programs/veyra/: Cargo.toml
programs/veyra/src/: lib.rs
scripts/: run_benchmark.py  run_veyra.py
src/veyra/: __init__.py  __main__.py  config.py  core.py  logging_utils.py
src/veyra/api/: app.py  zwm.py
src/veyra/benchmarks/: __init__.py  base.py  cplc.py  runner.py
src/veyra/governance/: __init__.py  audit.py  policy.py
src/veyra/models/: __init__.py  anthropic_backend.py  base.py  mock.py  openai_backend.py  registry.py
src/veyra/runtime/: __init__.py  latency.py  scheduler.py
src/veyra/tools/: __init__.py  base.py  safety.py
tests/: conftest.py  test_benchmarks.py  test_core.py  test_governance.py  test_logging.py  test_models.py  test_runtime.py  test_tools.py
