[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veyra"
version = "0.1.0"
description = "Veyra: A system for reconstructing past states from present-day traces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Veyra Team", email = "team@veyra.ai" },
]
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "pandas",
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/veyra"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
