[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veyra"
version = "0.1.0"
description = "Post-Super-Intelligence Interplanetary LLM System with audit trails, safety boundaries, and latency resilience"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Zuup Innovation Lab", email = "team@zuup.org" },
]
keywords = [
    "llm",
    "ai",
    "autonomy",
    "safety",
    "audit",
    "governance",
    "interplanetary",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "rich>=13.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "ruff>=0.2",
    "pip-audit>=2.7",
    "safety>=3.0",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/khaaliswooden-max/veyra"
Documentation = "https://github.com/khaaliswooden-max/veyra#readme"
Repository = "https://github.com/khaaliswooden-max/veyra.git"
Issues = "https://github.com/khaaliswooden-max/veyra/issues"
Changelog = "https://github.com/khaaliswooden-max/veyra/blob/main/CHANGELOG.md"

[project.scripts]
veyra = "veyra.__main__:main"
veyra-nano = "veyra.nano:main"

[tool.hatch.build.targets.wheel]
packages = ["src/veyra"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# =============================================================================
# Black
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# Ruff
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]  # Unused function args OK in tests

# =============================================================================
# MyPy
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/veyra"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60
show_missing = true

# =============================================================================
# Bandit
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used - OK in tests
